test_suite/alan-2022-examples/failing/006290_mutation.alan
source G begin leave 8 call - 95 end
